--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ lazy_static = "1.0.1"
 time = "0.1"
 derive_more = "0.13.0"
 anyhow = "1.0.34"
+codespan-reporting = "0.11.1"
 
 [dependencies.nom]
 version = "4.0.0"
