--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "Readme.md"
 keywords = ["gothic", "daedalus", "parser", "compiler"]
 categories = ["parser-implementations"]
 license = "MIT"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 clap = "2.32.0"
@@ -21,9 +21,9 @@ time = "0.1"
 derive_more = "0.13.0"
 anyhow = "1.0.34"
 codespan-reporting = "0.11.1"
-
-[dependencies.nom]
-version = "4.0.0"
-features = ["verbose-errors"]
-
+env_logger = "0.11.2"
+log = "0.4.20"
+itertools = "0.12.1"
+serde = { version = "1.0.196", features = ["derive"] }
+serde_json = "1.0.113"
 
