--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,6 @@ log = "0.4.20"
 itertools = "0.12.1"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
+strum = { version = "0.26.1", features = ["derive"] }
+test-log = "0.2.14"
 
