--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ test-log = "0.2.14"
 deku = { version = "0.16.0", git = "https://github.com/sharksforarms/deku", branch = "impl-reader-bit-order2" }
 bitflags = "2.4.2"
 codespan-reporting = { version = "0.11.1", git = "https://github.com/brendanzab/codespan" }
+derive_builder = "0.20.0"
 
 [dev-dependencies]
 tempfile = "3.10.0"
